# AsLib-Server

./: .dockerignore  .env.template  Dockerfile  Dockerfile.production  alembic.ini  docker-compose-production.yml  docker-compose.yml  pyproject.toml
app/api/: server.py
app/api/dependencies/: addresses.py  auth.py  book_items.py  books.py  lendings.py  libraries.py  racks.py  reservations.py  users.py
app/api/routes/: __init__.py  auth.py  authors.py  book_items.py  books.py  lendings.py  profiles.py  racks.py  reservations.py  system_config.py  users.py
app/api/routes/libraries/: __init__.py  librarians.py  libraries.py
app/core/: config.py  tasks.py
app/db/: tasks.py
app/db/migrations/: env.py
app/db/migrations/versions/: 8a9272ba5a3a_create_main_tables.py
app/db/repositories/: addresses.py  authors.py  book_items.py  books.py  lendings.py  librarians.py  libraries.py  profiles.py  racks.py  reservations.py  system_config.py  users.py
app/models/: address.py  author.py  book.py  book_item.py  core.py  lending.py  librarians.py  library.py  profile.py  rack.py  reservation.py  system_config.py  token.py  user.py
app/services/: jwt.py  security.py
tests/: conftest.py  test_profiles.py  test_users.py
