[tool.poetry]
name = "aslib"
version = "0.1.0"
description = ""
authors = ["Ihor Sofiichenko <asoluter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# app
fastapi = "^0.64.0"
uvicorn = "^0.13.4"
pydantic = "^1.8.1"
email-validator = "^1.1.2"
python-multipart = "^0.0.5"
# db
databases = { extras = ["postgresql"], version = "^0.4.3" }
SQLAlchemy = "^1.3.24"
alembic = "^1.6.2"
asyncpg = "^0.22.0"
psycopg2-binary = "^2.8.6"
# auth
PyJWT = "^2.1.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
fastapi-utils = "^0.2.1"


[tool.poetry.dev-dependencies]
black = "^21.5b0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.1"
asgi-lifespan = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
